--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "size": "yarn build:es && size-limit",
-    "build": "rm -rf ./lib/* ./esm/* && yarn size && yarn build:cjs && yarn build:es",
+    "build": "rm -rf ./lib/* ./esm/* && yarn build:cjs && yarn build:es",
     "build:cjs": "tsc",
     "build:es": "tsc -m esNext --outDir esm",
     "prepublishOnly": "yarn build"
@@ -41,25 +40,24 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.44.6",
-    "@types/node": "^12.0.4",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-config-standard": "^12.0.0",
+    "@types/node": "^15.3.1",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.17.1",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "size-limit": "^4.6.2",
-    "typescript": "^3.5.1"
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "prettier": "^2.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
